# sof

./: .clang-format  .gitignore  .gitmodules  .tarball-version  .travis.yml  0001-cnl-don-t-switch-to-lower-clock.patch  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  CODEOWNERS  Kconfig  Kconfig.sof  Kconfig.xtos  Kconfig.xtos-build  Kconfig.xtos-dbg  Kconfig.zephyr-log  LICENCE  LICENSE  Makefile.am  Makefile.in  README  README.configure  README.md  autogen.sh  build-all.sh  config.h.in  configure  configure.ac  git-version.sh  hello.txt  sof_debug_error_log  sof_nightly_build_pretend  test-coherent.c  test.md  test.txt  test_sof_ci.txt  test_sof_test.txt  uuid-registry.txt  version.sh  versions.json  (+1 more)
app/: CMakeLists.txt  CMakePresets.json  Kconfig  ctf_kernel_traces_overlay.conf  debug_overlay.conf  debug_stream_overlay.conf  llext_relocatable.conf  logging_mipisystcat_overlay.conf  no_auth_llext_overlay.conf  os_linux_overlay.conf  perf_overlay.conf  prj.conf  sample.yaml  shell_overlay.conf  stub_build_all_ipc3.conf  stub_build_all_ipc4.conf  userspace_overlay.conf  winconsole_overlay.conf  ztest_overlay.conf
app/boards/: acp_6_0_adsp.conf  acp_7_0_adsp.conf  acp_7_x_adsp.conf  imx8mp_evk_mimx8ml8_adsp.conf  imx8mp_evk_mimx8ml8_adsp.overlay  imx8mp_evk_mimx8ml8_m7_ddr.conf  imx8mp_evk_mimx8ml8_m7_ddr.overlay  imx8qm_mek_mimx8qm6_adsp.conf  imx8qm_mek_mimx8qm6_adsp.overlay  imx8qxp_mek_mimx8qx6_adsp.conf  imx8qxp_mek_mimx8qx6_adsp.overlay  imx8ulp_evk_mimx8ud7_adsp.conf  imx8ulp_evk_mimx8ud7_adsp.overlay  imx93_evk_mimx9352_a55.conf  imx93_evk_mimx9352_a55.overlay  imx95_evk_mimx9596_m7_ddr.conf  imx95_evk_mimx9596_m7_ddr.overlay  intel_adsp_ace15_mtpm.conf  intel_adsp_ace20_lnl.conf  intel_adsp_ace30_ptl.conf  intel_adsp_ace30_ptl_llvm_qemu.conf  intel_adsp_ace30_ptl_sim.conf  intel_adsp_ace30_wcl.conf  intel_adsp_ace30_wcl_sim.conf  intel_adsp_ace40_nvl.conf  intel_adsp_ace40_nvls.conf  intel_adsp_cavs15.conf  intel_adsp_cavs18.conf  intel_adsp_cavs20_jsl.conf  intel_adsp_cavs25.conf  intel_adsp_cavs25_tgph.conf  mimx93_evk_a55.conf  mimx93_evk_a55.overlay  mimx93_evk_a55_sof.conf  mt8188_mt8188_adsp.conf  mt8196_mt8196_adsp.conf  mt8365_mt8365_adsp.conf  native_sim.conf  native_sim_libfuzzer.conf  nxp_adsp_imx8ulp.conf  (+3 more)
app/compr/: README.txt  aac.conf  all_codecs.conf  cadence.conf  mp3.conf  pcm.conf  vorbis.conf
app/configs/: fuzz_IPC3_features.conf  fuzz_IPC4_features.conf  fuzz_coverage.conf  fuzz_features.conf  fuzz_ubsan.conf
app/overlays/: repro-build.conf
app/src/: main.c
rimage/: CMakeLists.txt  Makefile.am  baytrail.c  cherrytrail.c  cse.c  cse.h  css.c  css.h  elf.c  elf.h  ext_manifest.c  ext_manifest.h  file_format.h  file_simple.c  flat.c  hash.c  man_apl.c  man_cnl.c  man_kbl.c  man_sue.c  manifest.c  manifest.h  pkcs1_5.c  plat_auth.c  plat_auth.h  rimage.c  rimage.h
rimage/keys/: README
smex/: CMakeLists.txt  README.md  elf.c  elf.h  elf_defs.h  ldc.c  ldc.h  smex.c  smex.h
src/: CMakeLists.txt  Kconfig  Makefile.am  Makefile.in  adsp_config.c  cse.c  css.c  elf.c  ext_manifest.c  file_simple.c  file_utils.c  hash.c  man_apl.c  man_cnl.c  man_kbl.c  man_sue.c  man_tgl.c  manifest.c  misc_utils.c  pkcs1_5.c  plat_auth.c  rimage.c  spinlock.c  toml_utils.c
src/arch/: CMakeLists.txt  Kconfig  Makefile.am
src/audio/: 1  CMakeLists.txt  Kconfig  Makefile.am  audio_stream.c  base_fw.c  base_fw_intel.c  buffer.c  chain_dma.c  channel_map.c  component.c  copier.c  dai-legacy.c  dai-zephyr.c  dai.c  data_blob.c  detect_test.c  dma-trace.c  dp_queue.c  dsrc.c  endpoint_dai.c  endpoint_host.c  eq_fir.c  eq_fir.h  eq_iir.c  eq_iir.h  fir.c  fir.h  fir_config.h  fir_hifi2ep.c  fir_hifi2ep.h  fir_hifi3.c  fir_hifi3.h  fork_trigger.c  google_audio_post_processing.c  google_audio_post_processing_mock.c  google_ctc_audio_processing.c  google_ctc_audio_processing_mock.c  google_hotword_detect.c  google_rtc_audio_processing.c  (+50 more)
src/debug/: CMakeLists.txt  dram.c  panic.c
src/drivers/: CMakeLists.txt  Kconfig  Makefile.am  apl-ssp.c  byt-dma.c  byt-ssp.c  dai.c  dmic.c  dw-dma.c  dw-uart.c  hda-dma.c  hsw-ssp.c  interrupt.c  spi.c  ssp.c  ssp.h  stream.h
src/gdb/: CMakeLists.txt  Makefile.am  gdb.c  init.S  ringbuffer.c
src/host/: CMakeLists.txt  Makefile.am  alloc.c  common_test.c  edf_schedule.c  file.c  ipc.c  ll_schedule.c  schedule.c  testbench.c  topology.c  trace.c
src/idc/: CMakeLists.txt  Kconfig  idc.c  zephyr_idc.c
src/include/: Makefile.am  README.md  init.h  task.h
src/init/: CMakeLists.txt  Makefile.am  README.md  ext_manifest.c  init.c
src/ipc/: CMakeLists.txt  Kconfig  Makefile.am  README.md  apl-ipc.c  bxt-ipc.c  byt-ipc.c  cc_version.c  cnl-ipc.c  dai-ipc3.c  dai-ipc4.c  dma-copy.c  handler-ipc3.c  handler-ipc4.c  handler.c  helper-ipc3.c  helper-ipc4.c  hsw-ipc.c  intel-ipc.c  (+10 more)
tools/: .gitignore  CMakeLists.txt  Makefile.am  README  README.md  autogen.sh  configure.ac
topology/: Makefile.am  reef-apl-nocodec.m4  reef-apl-tdf8532.m4  reef-bdw-rt286.m4  reef-bdw-rt5640.m4  reef-bxt-nocodec.m4  reef-byt-da7212.m4  reef-byt-da7213.m4  reef-byt-nocodec.m4  reef-byt-rt5640.m4  reef-byt-rt5645.m4  reef-byt-rt5651.m4  reef-cht-max98090.m4  reef-cht-nocodec.m4  reef-cnl-rt274.m4  reef-hsw-rt5640.m4  sof-apl-da7219.m4  sof-apl-eq-dmic.m4  sof-apl-eq-pcm512x.m4  sof-apl-hdmi.m4  sof-apl-nocodec.m4  sof-apl-pcm512x.m4  sof-apl-rt298.m4  sof-apl-tdf8532.m4  sof-apl-wm8804.m4  sof-bdw-rt286.m4  sof-bdw-rt5640.m4  sof-byt-da7213.m4  sof-byt-nocodec.m4  sof-byt-rt5640.m4  sof-byt-rt5645.m4  sof-byt-rt5651.m4  sof-cht-max98090.m4  sof-cht-nocodec.m4  sof-cnl-rt274.m4  sof-glk-codec.m4  sof-glk-da7219.m4  sof-hda-generic.m4  sof-hsw-rt5640.m4  sof-icl-nocodec.m4  (+8 more)
zephyr/: CMakeLists.txt  FindZephyr-sdk.cmake  Kconfig  README  README.md  alloc.c  alloc_cavs.c  alloc_imx.c  boot_test.c  dma-trace.c  docker-build.sh  docker-preset-build.sh  docker-run.sh  edf_schedule.c  init.c  interrupt.c  ipc.c  lib.c  ll_schedule.c  module.yml  panic.c  pipeline_static.c  pm.c  schedule.c  shell.md  sof_shell.c  timer.c  trace.c  uuid-snippet.ld  wrapper.c
(+7543 files in other folders)
